--- a/Rock_Paper_Scissors.css
+++ b/Rock_Paper_Scissors.css
@@ -1,4 +1,8 @@
 
+.background {
+    background-color: thistle;
+}
+
 .head {
     display: flex;
     justify-content: center;
@@ -16,6 +20,8 @@
 
 .btnStyle {
     border-radius: 20px;
+    background-color: grey;
+    box-shadow: 2px 5px black;
 }
 
 .scores {
@@ -33,6 +39,9 @@
     display: flex;
     justify-content: space-evenly;
     margin-top: 20px;
+    font-family: fantasy;
+    font-weight: 600;
+    font-size: 50px;
 }
 
 .container {
