--- a/Rock_Paper_Scissors.css
+++ b/Rock_Paper_Scissors.css
@@ -22,6 +22,8 @@
     border-radius: 20px;
     background-color: grey;
     box-shadow: 2px 5px black;
+    border-width: 5px;
+    border-color: black;
 }
 
 .scores {
